--- a/MH4930 Notes/main.tex
+++ b/MH4930 Notes/main.tex
@@ -144,7 +144,7 @@ I hereby disclaim that contents this note is only for my own use, and the note a
 \input{week 6}
 \input{week 7}
 \input{week 8}
-%\input{week 9}
+\input{week 9}
 %\input{week 10}
 %\input{week 11}
 %\input{week 12}
