--- a/MH4930 Notes/week 8.tex
+++ b/MH4930 Notes/week 8.tex
@@ -172,7 +172,7 @@ With slight modification, a similar statement on free resolution can be proven:
 
 \begin{defn}[Ext group]
     Let $P_\bullet \twoheadrightarrow V$ be a projective resolution of $V$ and $W$ be an $R$-module. We get a complex (of abelian group)
-    \[\C:=0 \to \h_R(P_0, W)\xto{d_1^*} \h_(P_1, W) \xto{d_2^*} \h_R(P_2, W)\xto{d^*_3}\dots\]
+    \[\mathcal C:=0 \to \h_R(P_0, W)\xto{d_1^*} \h_(P_1, W) \xto{d_2^*} \h_R(P_2, W)\xto{d^*_3}\dots\]
     where $V$ is forgetted. It is indeed a complex since
     \[d_{n+1}^*\circ d_n^* = (d_n \circ d_{n+1})^* = 0\]
     Note that this complex is usually not exact.
