--- a/MH4930 Notes/week 9.tex
+++ b/MH4930 Notes/week 9.tex
@@ -99,18 +99,32 @@
 \begin{thm} [Snake Lemma]
     \todo{statement, proof is left as tutorial exercise}
 \end{thm}
-
-\medskip
+\begin{proof}
+    Left as tutorial exercise.
+\end{proof}
 
 \begin{thm} [Horseshoe Lemma]
     \todo{statement, proof is left as tutorial exercise}
 \end{thm}
-
-\medskip
+\begin{proof}
+    Left as tutorial exercise.
+\end{proof}
 
 \begin{thm}
     Let $0\to X\to Y\to Z\to 0$ be a SES of $R$-modules. Then we have a LES of abelian groups 
     \[0 \to \h_R(Z,D) \to \h_R(Y,D) \to \h_R(X,D) \to \ext^1_R(Z,D) \to \ext^1_R(Y,D) \to \ext^1_R(X,D) \to \ext^2_R(Z,D)\]
+\end{thm}
+\begin{proof}
+    \todo{proof}
+\end{proof}
+
+\begin{thm}
+    Let $Q$ be a $R$-module. TFAE:
+    \begin{enumerate}
+        \item $Q$ is injective.
+        \item $\ext^1_R(A,Q)=0$ for all $R$-module $A$
+        \item $\ext^n_R(A,Q)=0$ for all $R$-module $A$ and $n\in\Z^+$.
+    \end{enumerate}
 \end{thm}
 \begin{proof}
     \todo{proof}
