--- a/MH4930 Notes/week 9.tex
+++ b/MH4930 Notes/week 9.tex
@@ -112,7 +112,8 @@
 
 \begin{thm}
     Let $0\to X\to Y\to Z\to 0$ be a SES of $R$-modules. Then we have a LES of abelian groups 
-    \[0 \to \h_R(Z,D) \to \h_R(Y,D) \to \h_R(X,D) \to \ext^1_R(Z,D) \to \ext^1_R(Y,D) \to \ext^1_R(X,D) \to \ext^2_R(Z,D)\]
+    \[0 \to \h_R(Z,D) \to \h_R(Y,D) \to \h_R(X,D)\] 
+    \[\to \ext^1_R(Z,D) \to \ext^1_R(Y,D) \to \ext^1_R(X,D) \to \ext^2_R(Z,D)\]
 \end{thm}
 \begin{proof}
     \todo{proof}
