--- a/MH4930 Notes/main.tex
+++ b/MH4930 Notes/main.tex
@@ -66,6 +66,7 @@
 \newcommand{\cat}{\mathcal C}
 \newcommand{\ep}{\varepsilon}
 \newcommand{\ext}{\operatorname{Ext}}
+\newcommand{\tor}{\operatorname{Tor}}
 
 \newcommand{\xto}[1]{\xrightarrow{#1}}
 \newcommand{\ot}{\leftarrow}
@@ -145,7 +146,7 @@ I hereby disclaim that contents this note is only for my own use, and the note a
 \input{week 7}
 \input{week 8}
 \input{week 9}
-%\input{week 10}
+\input{week 10}
 %\input{week 11}
 %\input{week 12}
 %\input{week 12}
