--- a/MH4930 Notes/week 7.tex
+++ b/MH4930 Notes/week 7.tex
@@ -348,8 +348,8 @@ Moreover, if $D$ is a $(S,R)$-bimodule, then $\mathcal F:X\mapsto D\ten_R X$ is 
 \end{proof}
 
 \newpage
-\section{Chain Complex}
-\subsection{Chain Complex and Homology}
+\section{(Co)Homology, Ext Group, and Tor Group}
+\subsection{Theory of (Co)Homology}
 
 \begin{defn}[Chain complex and cochain complex]
     A chain complex is a sequence
