--- a/MH4930 Notes/week 8.tex
+++ b/MH4930 Notes/week 8.tex
@@ -125,6 +125,10 @@
     Thus the proof is completed.
 \end{proof}
 
+
+\newpage
+\subsection{Ext Group}
+
 \begin{defn} [Projective resolution]
     Let $V$ be an $R$-module. A projective resolution of $V$ is an exact complex 
     \[\cdots \to P_2 \xto{d_2} P_1 \xto{d_1} P_0 \xto{\ep} V \to 0\to 0 \to \dots\]
