--- a/MH4930 Notes/week 9.tex
+++ b/MH4930 Notes/week 9.tex
@@ -119,6 +119,12 @@
     \todo{proof}
 \end{proof}
 
+\begin{re}
+    Note that since $\h_R(X,D)\cong \ext_R^0(X,D)$, thus the whole LES above is a LES of ext groups.
+\end{re}
+
+\medskip
+
 \begin{thm}
     Let $Q$ be a $R$-module. TFAE:
     \begin{enumerate}
