--- a/MH4930 Notes/main.tex
+++ b/MH4930 Notes/main.tex
@@ -65,8 +65,12 @@
 \newcommand{\f}{\mathcal F}
 \newcommand{\cat}{\mathcal C}
 \newcommand{\ep}{\varepsilon}
+\newcommand{\coker}{\operatorname{coker}}
 \newcommand{\ext}{\operatorname{Ext}}
 \newcommand{\tor}{\operatorname{Tor}}
+\newcommand{\aut}[1]{\operatorname{Aut}\br{#1}}
+\newcommand{\gl}{\operatorname{GL}}
+\newcommand{\gal}{\operatorname{Gal}}
 
 \newcommand{\xto}[1]{\xrightarrow{#1}}
 \newcommand{\ot}{\leftarrow}
