--- a/MH4930 Notes/week 1.tex
+++ b/MH4930 Notes/week 1.tex
@@ -156,7 +156,7 @@ One can think of module analogous to "ring action".
 
 \medskip
 
-\begin{ex} [Group algebra]
+\begin{ex} [Group algebra] \label{ex: group algebra}
     Let $G$ be a group and $R$ be a commutative ring. Define $RG$ (or sometimes $R[G]$) to be the set
     \[RG:= \sbr{\text{formal finite sum of the form }\sum_{g\in G}r_g g \text{ where }r_g\in R}\]
     together with the operating rules
