--- a/MH4930 Notes/week 7.tex
+++ b/MH4930 Notes/week 7.tex
@@ -349,7 +349,7 @@ Moreover, if $D$ is a $(S,R)$-bimodule, then $\mathcal F:X\mapsto D\ten_R X$ is 
 
 \newpage
 \section{(Co)Homology, Ext Group, and Tor Group}
-\subsection{Theory of (Co)Homology}
+\subsection{Basic Theory of (Co)Homology}
 
 \begin{defn}[Chain complex and cochain complex]
     A chain complex is a sequence
