--- a/MH4930 Notes/week 8.tex
+++ b/MH4930 Notes/week 8.tex
@@ -182,7 +182,7 @@ With slight modification, a similar statement on free resolution can be proven:
     Note that this complex is usually not exact.
 
     The $n$-th cohomology group derived from the left exact contravariant functor $\h_R(-, W)$ is 
-    \[\ext_R^n(V,W):= H^n(\C)=\frac{\ker d_{n+1}^*}{\im d_n^*}\]
+    \[\ext_R^n(V,W):= H^n(\mathcal C)=\frac{\ker d_{n+1}^*}{\im d_n^*}\]
     Clearly $\ext_R^0(V,W) = \ker d_1 ^*$.
 \end{defn}
 
