--- a/MH4930 Notes/main.tex
+++ b/MH4930 Notes/main.tex
@@ -141,15 +141,15 @@ I hereby disclaim that contents this note is only for my own use, and the note a
 
 \newpage
 \section{Module Theory}
-\input{week 1}
-\input{week 2}
-\input{week 3}
-\input{week 4}
-\input{week 5}
-\input{week 6}
-\input{week 7}
-\input{week 8}
-\input{week 9}
+%\input{week 1}
+%\input{week 2}
+%\input{week 3}
+%\input{week 4}
+%\input{week 5}
+%\input{week 6}
+%\input{week 7}
+%\input{week 8}
+%\input{week 9}
 \input{week 10}
 %\input{week 11}
 %\input{week 12}
