--- a/MH4930 Notes/week 9.tex
+++ b/MH4930 Notes/week 9.tex
@@ -39,7 +39,18 @@
 	\arrow["\in"{marking, allow upside down}, draw=none, from=5-5, to=4-5]
     \end{tikzcd}\]
         and $\ext_\Z^1(\Z/m\Z, D)\cong D/mD$.
-    \item \todo{explain on how to construct}
+    \item If $\Z/m\Z$ is a $(\Z/d\Z)$-module for some $d$, then $d\cdot \overline{1}= \overline{0}$, implying that $\overline{d} = \overline{0}$, so $m\mid d$. We now compute $\ext_{\Z/d\Z}(\Z/m\Z, D)$ where $D$ is a $\Z/d\Z$-module. To come up with a free resolution of $\Z/m\Z$, note we must start from 
+    \[\dots \xto \Z/d\Z \xto{\beta} \Z/d\Z \xto{\alpha} \Z/d\Z \xto{\pi} \Z/m\Z \to 0\]
+	where $\pi$ is the canonical surjection. We have to determine what is $\alpha$ and $\beta$. Note we must have $\im\alpha = \ker \pi$. This says that $\alpha$ is the operation $\times m$. Similarly, one can derive that $\beta$ is the operation $\times \frac{d}{m}$. Thus we obtain the free resolution of $\Z/m\Z$:
+	 \[\dots \xto{\times \frac{d}{m}} \Z/d\Z \xto{\times m} \Z/d\Z \xto \Z/d\Z \xto{\times \frac{d}{m}} \Z/d\Z \xto{\times m} \Z/d\Z \xto{\pi} \Z/m\Z \to 0\]
+	 Next, perform similar action as in the first example: to compute the Ext group, take hom and remove the first entry we have 
+	 \[0 \to \h_{\Z/d\Z}(\Z/d\Z, D) \xto{(\times m)^*} \h_{\Z/d\Z}(\Z/d\Z, D) \xto{(\times \frac{d}{m})^*}\h_{\Z/d\Z}(\Z/d\Z, D) \xto{(\times m)^*}\dots\]
+	 We have verified previously that the $0$-th Ext group is isomorphic to $\h_{\Z/d\Z}(\Z/m\Z, D)$. Let $\varphi\in \h_{\Z/d\Z}(\Z/m\Z, D)$. It suffices to see $d:= \varphi(\overline{1})$. Note $\overline{0} = \varphi(\overline{m}) = m \varphi(\overline{1}) = md$. This says that 
+	 \[\ext_{\Z/d\Z}^0(\Z/m\Z, D)\cong \sbr{d\in D: m\cdot d = 0}\]
+	 Next, since the maps of the complex alternates, all odd-order Ext groups are the same, simialrly for even-order. Direct computation says that if $n$ is odd
+	 \[\ext^n_{\Z/d\Z}(\Z/m\Z, D) \cong \frac{\sbr{x\in D: \frac{d}{m}\cdot x = 0}}{\sbr{mx: x\in D}}\]
+	 and if $n$ is even
+	 \[\ext^n_{\Z/d\Z}(\Z/m\Z, D) \cong \frac{\sbr{x\in D:m\cdot x = 0}}{\sbr{\frac{d}{m} \cdot x:x\in D}}\]
     \end{enumerate}
 \end{ex}
 
@@ -79,11 +90,87 @@
     Futhermore, given two such maps $f_n:P_n \to P_n'$ and $g_n:P_n\to P_n'$, there exists $s_n:P_n \to P_{n+1}'$ such that $f_n-g_n=\delta_{n+1}s_n + s_{n-1}d_n$.
 \end{pro}
 \begin{proof}
-    Idea: use projective to get a map, and do induction.
+    The idea of the proof is to get the required map from the definition of projective module, and we will be performing induction on the length of the projective resolution.
 
-    Part 2: Changing between straight square and slanted square, use projective module's property to get a lifting map, and perform induction.
+	First, for the base case, suppose that we have 
+	\[\begin{tikzcd}[sep=small]
+	{P_0} && V && 0 \\
+	\\
+	{P'_0} && {V'} && 0
+	\arrow["{d_0}", from=1-1, to=1-3]
+	\arrow[from=1-3, to=1-5]
+	\arrow["f", from=1-3, to=3-3]
+	\arrow["{\delta_0}", from=3-1, to=3-3]
+	\arrow[from=3-3, to=3-5]
+	\end{tikzcd}\]
+	Note $\delta_0$ is surjective. Also $P_0$ get maps to $V'$ via $f\circ d_0$. We thus have the following commutative diagram:
+	\[\begin{tikzcd}[sep=small]
+	&& {P_0} \\
+	\\
+	{P'_0} && {\im \delta_0 = V'}
+	\arrow["{\exists f_0}"', dashed, from=1-3, to=3-1]
+	\arrow["{f\circ d_0}", from=1-3, to=3-3]
+	\arrow["{\delta_0}", two heads, from=3-1, to=3-3]
+	\end{tikzcd}\]
+	where the existence of $f_0$ is ensured by the definition of projective module. This proves the base case.
 
-    \todo{proof}
+	Next, suppose we have constructed $f_{n-1}: P_{n-1}\to P_{n-1}'$. The following is a part of the commutative diagram:
+	\[\begin{tikzcd}[sep=small]
+	{P_n} && {P_{n-1}} && {P_{n-2}} \\
+	\\
+	{P'_n} && {P_{n-1}} && {P'_{n-2}}
+	\arrow["{d_n}", from=1-1, to=1-3]
+	\arrow["{d_{n-1}}",,from=1-3, to=1-5]
+	\arrow["f_{n-1}", from=1-3, to=3-3]
+	\arrow["f_{n-2}", from=1-5, to=3-5]
+	\arrow["{\delta_n}", from=3-1, to=3-3]
+	\arrow["{\delta_{n-1}}",from=3-3, to=3-5]
+	\end{tikzcd}\]
+	Similarly, consider $f_{n-1}\circ d_n$ that maps $P_n$ to $\im \delta_n$. Note we have to check for the condition on applying the lift of the map in the definition of projective modules, which is true, since 
+	\[\delta_{n-1}\circ (f_{n-1} \circ d_n) = (\delta_{n-1}\circ f_{n-1}) \circ d_n = f_{n-2} \circ d_{n-1}\circ d_n = 0\] 
+	Thus we have
+	\[\begin{tikzcd}[sep=small]
+	&& {P_n} \\
+	\\
+	{P'_{n-1}} && {\im \delta_n = \ker \delta_{n-1}}
+	\arrow["{\exists f_n}"', dashed, from=1-3, to=3-1]
+	\arrow["{f_{n-1} \circ d_n}", from=1-3, to=3-3]
+	\arrow["{\delta_n}", two heads, from=3-1, to=3-3]
+	\end{tikzcd}\]
+	where existence of $f_n$ is ensured by the definition of projectivce modules. This proves the first part of the statement.
+
+	For the second part of the statement, we use the similar trick to compute the desired maps $s_\bullet$. First define $s_{-2}:0\to V'$ where $s_{-2}=0$ and $s_{-1}:V\to P_0'$ where $s_{-1}=0$. It is clear that the required condition is satisfied, simply check that $f-f = 0 \cdot 0 + \delta_0 \cdot 0 = 0$.
+
+	Next, for the construction of $s_0$, consider the map $f_0- g_0-s_{-1}d_0$ that maps $P_0$ to $\im \delta_1$. We first check that
+	\[\delta_0\circ (f_0 - g_0 -s_{-1}\circ d_0) = f\circ d_0 - f\circ d_0 = 0\]
+	Thus we have the following commutative diagram
+    \[\begin{tikzcd}[sep=small]
+	&& {P_0} \\
+	\\
+	{P'_1} && {\im \delta_1 = \ker \delta_0}
+	\arrow["{\exists s_0}"', dashed, from=1-3, to=3-1]
+	\arrow["{f_0 - g_0 - s_{-1}d_0}", from=1-3, to=3-3]
+	\arrow["{\delta_1}", two heads, from=3-1, to=3-3]
+	\end{tikzcd}\]
+	where existence of $s_0$ is ensured by the definition of projective module. We see that the required condition $f_0 - g_0 = s_{-1}d_0 + \delta_1s_0$ holds since the commutativity of the diagram says that $f_0 - g_0 -s_{-1}\circ d_0 = \delta_1s_0$. 
+	For the inductive steps, suppose we have constructed $s_{n-1}:P_{n-1}\to P_n'$. We consider $f_n - g_n - s_{n-1}d_n$ †hat maps $P_n$ to $\im \delta_{n+1}$. We check that
+	\begin{align*}
+		\delta_n(f_n - g_n - s_{n-1}d_n) 
+		&= f_{n-1}d_n-g_{n-1}d_n-\delta_n s_{n-1} d_n\\ 
+		&= (f_{n-1}-g_{n-1}-\delta_n s_{n-1})d_n \\
+		&= (s_{n-1} d_{n-1})d_n\\
+		&= 0
+	\end{align*}
+	Thus, by the definition of projective modules we have the followng commutative diagram:
+	\[\begin{tikzcd}[sep=small]
+	&& {P_n} \\
+	\\
+	{P'_{n+1}} && {\im \delta_{n+1} = \ker \delta_n}
+	\arrow["{\exists s_n}"', dashed, from=1-3, to=3-1]
+	\arrow["{f_n - g_n - s_{n-1}d_n}", from=1-3, to=3-3]
+	\arrow["{\delta_{n+1}}", two heads, from=3-1, to=3-3]
+	\end{tikzcd}\]
+	where the existence of $s_n$ is ensured by the definition on projective module in lifting of maps. This concludes the proof.
 \end{proof}
 
 \begin{defn}[Homotopic and homotopy equivalence]
@@ -127,7 +214,114 @@
     The $n$-th cohomology group $\ext^n_R(V,W)$ is independent, up to isomorphism, of the choice of the projective residue of $V$.
 \end{thm}
 \begin{proof}
-    \todo{proof}
+    Let $P_\bullet \twoheadrightarrow V$ and $P'_\bullet \twoheadrightarrow V$ be two projective resolution of $V$. We thus have the following commutative diagram by Comporison Theorem:
+	\[\begin{tikzcd}[sep=small]
+	\dots && {P_2} && {P_1} && {P_0} && V && 0 && \dots \\
+	\\
+	\dots && {P_2'} && {P_1'} && {P_0'} && V && 0 && \dots \\
+	\\
+	\dots && {P_2} && {P_1} && {P_0} && V && 0 && \dots
+	\arrow[from=1-1, to=1-3]
+	\arrow["d", from=1-3, to=1-5]
+	\arrow["{f_2}"', from=1-3, to=3-3]
+	\arrow["d", from=1-5, to=1-7]
+	\arrow["{f_1}"', from=1-5, to=3-5]
+	\arrow["d", from=1-7, to=1-9]
+	\arrow["{f_0}"', from=1-7, to=3-7]
+	\arrow[from=1-9, to=1-11]
+	\arrow[tail reversed, from=1-9, to=3-9]
+	\arrow[from=1-11, to=1-13]
+	\arrow[from=3-1, to=3-3]
+	\arrow["d", from=3-3, to=3-5]
+	\arrow["{g_2}"', from=3-3, to=5-3]
+	\arrow["d", from=3-5, to=3-7]
+	\arrow["{g_1}"', from=3-5, to=5-5]
+	\arrow["d", from=3-7, to=3-9]
+	\arrow["{g_0}"', from=3-7, to=5-7]
+	\arrow[from=3-9, to=3-11]
+	\arrow[tail reversed, from=3-9, to=5-9]
+	\arrow[from=3-11, to=3-13]
+	\arrow[from=5-1, to=5-3]
+	\arrow["d", from=5-3, to=5-5]
+	\arrow["d", from=5-5, to=5-7]
+	\arrow["d", from=5-7, to=5-9]
+	\arrow[from=5-9, to=5-11]
+	\arrow[from=5-11, to=5-13]
+	\end{tikzcd}\]
+	First, by removing $V$ and taking $\h_R(-,W)$ we have 
+	\[\begin{tikzcd}[sep=small]
+	0 && {\h_R(P_0, W)} && {\h_R(P_1, W)} && {\h_R(P_2, W)} && \dots \\
+	\\
+	0 && {\h_R(P'_0, W)} && {\h_R(P'_1, W)} && {\h_R(P'_2, W)} && \dots \\
+	\\
+	0 && {\h_R(P_0, W)} && {\h_R(P_1, W)} && {\h_R(P_2, W)} && \dots
+	\arrow[from=1-1, to=1-3]
+	\arrow["{d^*}", from=1-3, to=1-5]
+	\arrow["{d^*}", from=1-5, to=1-7]
+	\arrow[from=1-7, to=1-9]
+	\arrow[from=3-1, to=3-3]
+	\arrow["{f^*_0}", from=3-3, to=1-3]
+	\arrow["{d^*}", from=3-3, to=3-5]
+	\arrow["{f^*_1}", from=3-5, to=1-5]
+	\arrow["{d^*}", from=3-5, to=3-7]
+	\arrow["{f^*_2}", from=3-7, to=1-7]
+	\arrow[from=3-7, to=3-9]
+	\arrow[from=5-1, to=5-3]
+	\arrow["{g^*_0}", from=5-3, to=3-3]
+	\arrow["{d^*}", from=5-3, to=5-5]
+	\arrow["{g^*_1}", from=5-5, to=3-5]
+	\arrow["{d^*}", from=5-5, to=5-7]
+	\arrow["{g^*_2}", from=5-7, to=3-7]
+	\arrow[from=5-7, to=5-9]
+	\end{tikzcd}\]
+	On the other hand, note that $g_n\circ f_n$ is a map from $P_n$ to itself. We can construct the following commutative diagram:
+	\[\begin{tikzcd}[sep=small]
+	\dots && {P_2} && {P_1} && {P_0} && V && 0 \\
+	\\
+	\dots && {P_2} && {P_1} && {P_0} && V && 0
+	\arrow["{d_3}", from=1-1, to=1-3]
+	\arrow["{d_2}", from=1-3, to=1-5]
+	\arrow["{g_2 f_2}", shift left, harpoon, from=1-3, to=3-3]
+	\arrow["1"', shift right, harpoon', from=1-3, to=3-3]
+	\arrow["{d_1}", from=1-5, to=1-7]
+	\arrow["{g_1f_1}", shift left, from=1-5, to=3-5]
+	\arrow["1"', shift right, from=1-5, to=3-5]
+	\arrow["{d_0}", from=1-7, to=1-9]
+	\arrow["{g_0f_0}", shift left, from=1-7, to=3-7]
+	\arrow["1"', shift right, from=1-7, to=3-7]
+	\arrow[from=1-9, to=1-11]
+	\arrow[tail reversed, from=1-9, to=3-9]
+	\arrow["{d_3}", from=3-1, to=3-3]
+	\arrow["{d_2}", from=3-3, to=3-5]
+	\arrow["{d_1}", from=3-5, to=3-7]
+	\arrow["{d_0}", from=3-7, to=3-9]
+	\arrow[from=3-9, to=3-11]
+	\end{tikzcd}\]
+	By the second part of the Comparison Theorem, there exists $s_n:P_n \to P_{n+1}$ such that $gf-1 = ds+ sd$.
+	
+	Back to the diagram with hom, see that
+	\[\begin{tikzcd}[sep=small]
+	0 && {\h_R(P_0,W)} && {\h_R(P_1,W)} && {\h_R(P_2,W)} && \dots \\
+	\\
+	0 && {\h_R(P_0,W)} && {\h_R(P_1,W)} && {\h_R(P_2,W)} && \dots
+	\arrow[from=1-1, to=1-3]
+	\arrow["{d_1^*}", from=1-3, to=1-5]
+	\arrow["{d_2^*}", from=1-5, to=1-7]
+	\arrow["{d_3^*}", from=1-7, to=1-9]
+	\arrow[from=3-1, to=3-3]
+	\arrow["{(g_0f_0)^*}"', shift right, harpoon', from=3-3, to=1-3]
+	\arrow["{1^*}", shift left, harpoon, from=3-3, to=1-3]
+	\arrow["{d_1^*}", from=3-3, to=3-5]
+	\arrow["{s_0^*}"', from=3-5, to=1-3]
+	\arrow["{(g_1f_1)^*}"', shift right, harpoon', from=3-5, to=1-5]
+	\arrow["{1^*}", shift left, harpoon, from=3-5, to=1-5]
+	\arrow["{d_2^*}", from=3-5, to=3-7]
+	\arrow["{s_1^*}"{description}, from=3-7, to=1-5]
+	\arrow["{(g_2 f_2)^*}"', shift right, harpoon', from=3-7, to=1-7]
+	\arrow["{1^*}", shift left, harpoon, from=3-7, to=1-7]
+	\arrow["{d_3^*}", from=3-7, to=3-9]
+	\end{tikzcd}\]
+	where note $(g_n f_n)^* = f_n^* g_n^*$. Note that the relation $gf-1 = ds + sd$ implies that $f^*g^* - 1^* = s^*d^* + d^*s^*$. By definition this is saying that $f^*\circ g^* \simeq \id_X$. Similarly, one can repeat all the arguments above to conclude that $g^*\circ f^* \simeq \id_Y$. Therefore the two complexes involving hom induces from $P_\bullet\twoheadrightarrow V$ and $P'_\bullet\twoheadrightarrow V$ are homotopy equivalent. Previous proposition says that the cohomologies computed from these two complexes are isomorphic, and thus the Ext group are independent of the choice of the starting projective resolution.
 \end{proof}
 
 \begin{thm} [Snake Lemma]
@@ -163,7 +357,7 @@
 	\\
 	\dots && {P_2} && {P_1} && {P_0} && X && 0 \\
 	\\
-	\dots && {P'_2} && {P'_1} && {P'_0} && Y && 0 \\
+	\dots && {P_2 \oplus Q_2} && {P_1 \oplus Q_1} && {P_0 \oplus Q_0} && Y && 0 \\
 	\\
 	\dots && {Q_2} && {Q_1} && {Q_0} && Z && 0 \\
 	\\
@@ -199,7 +393,7 @@
 	\arrow[from=7-7, to=9-7]
 	\arrow[from=7-9, to=7-11]
 	\arrow[from=7-9, to=9-9]
-\end{tikzcd}\]
+	\end{tikzcd}\]
 In particular, we denote the second non-zero row as $P_\bullet \oplus Q_\bullet$, and it is a projective resolution of $Y$.
 \end{thm}
 \begin{proof}
@@ -218,7 +412,7 @@ In particular, we denote the second non-zero row as $P_\bullet \oplus Q_\bullet$
 	\\
 	\dots && {P_2} && {P_1} && {P_0} && X && 0 \\
 	\\
-	\dots && {P'_2} && {P'_1} && {P'_0} && Y && 0 \\
+	\dots && {P_2 \oplus Q_2} && {P_1 \oplus Q_1} && {P_0 \oplus Q_0} && Y && 0 \\
 	\\
 	\dots && {Q_2} && {Q_1} && {Q_0} && Z && 0 \\
 	\\
@@ -254,7 +448,7 @@ In particular, we denote the second non-zero row as $P_\bullet \oplus Q_\bullet$
 	\arrow[from=7-7, to=9-7]
 	\arrow[from=7-9, to=7-11]
 	\arrow[from=7-9, to=9-9]
-\end{tikzcd}\]
+	\end{tikzcd}\]
 Taking $\h_R(-,D)$ we get 
 \[\begin{tikzcd}[sep=small]
 	&& 0 && 0 && 0 \\
@@ -291,9 +485,28 @@ Taking $\h_R(-,D)$ we get
 	\arrow[from=9-5, to=7-5]
 	\arrow[from=9-7, to=7-7]
 \end{tikzcd}\]
-
+where we shall refer to the second, third, and fourth row of complexes, which are non-zero, as $C^\bullet, B^\bullet$, and $A^\bullet$ respectively. Note $\h_R(P\oplus Q, D)\cong \h_R(P, D)\oplus \h_R(Q,D)$ via the following pairs of maps:
+\[\begin{tikzcd}[sep=small]
+	& {\alpha\pi_P \oplus \beta\pi_Q} &&& {(\alpha, \ \beta)} \\
+	{f:} & {\h_R(P\oplus Q, D)} &&& {\h_R(P,D) \oplus \h_R(Q,D)} & {:g} \\
+	& \varphi &&& {(\varphi\circ\iota_P,\ \varphi\circ \iota_Q)}
+	\arrow["\in"{marking, allow upside down}, draw=none, from=1-2, to=2-2]
+	\arrow["g"{description}, maps to, from=1-5, to=1-2]
+	\arrow["\in"{marking, allow upside down}, draw=none, from=1-5, to=2-5]
+	\arrow[shift right, harpoon', from=2-2, to=2-5]
+	\arrow[shift right, harpoon', from=2-5, to=2-2]
+	\arrow["\in"{marking, allow upside down}, draw=none, from=3-2, to=2-2]
+	\arrow["f"{description}, maps to, from=3-2, to=3-5]
+	\arrow["\in"{marking, allow upside down}, draw=none, from=3-5, to=2-5]
+\end{tikzcd}\]
+It is easy to verify that they are indeed isomorphism pairs, and is omitted here. This says that $\h_{R}(P\oplus Q, D)$ splits, and thus we get a SES of complexes
+\[0 \to A^\bullet \to B^\bullet \to C^\bullet \to 0\]
 Lastly, by theorem regarding LES on cohomology, we have 
-\[0\to \h^0(A^\bullet)\]
+\[0\to H^0(A^\bullet)\to H^0(B^\bullet) \to H^0(C^\bullet) \to H^1(A^\bullet)\to H^1(B^\bullet) \to H^1(C^\bullet) \to \dots\]
+where they the respective Ext groups of $X, Y$, and $Z$ with $D$. Additionally, the $0$-th Ext group is simply the hom set. Thus reexpressing the above LES we obtain
+	\[0 \to \h_R(Z,D) \to \h_R(Y,D) \to \h_R(X,D)\] 
+	\[\to \ext^1_R(Z,D) \to \ext^1_R(Y,D) \to \ext^1_R(X,D) \to \ext^2_R(Z,D)\to \dots\]
+which completes the proof.
 \end{proof}
 
 \begin{re}
@@ -311,15 +524,32 @@ Lastly, by theorem regarding LES on cohomology, we have
     \end{enumerate}
 \end{thm}
 \begin{proof}
-    $3. \implies 2.$ is trivial.
+	\hfill
 
-    For $2. \implies 1.$, suppose given SES $0 \to X\to Y\to Z\to 0$, we have LES on the Ext group
+    $[3. \implies 2.]$ Trivial.
+
+    $[2. \implies 1.]$ Suppose given SES $0 \to X\to Y\to Z\to 0$, we have LES on the Ext group
     \[0 \to \h_R(Z,Q) \to \h_R(Y,Q) \to \h_R(X,Q) \to \ext_R^1(Z,D)=0\to \dots\]
     This reduces into a SES
     \[0 \to \h_R(Z,Q) \to \h_R(Y,Q) \to \h_R(X,Q) \to 0\]
     So $Q$ is injective.
 
+	$[1. \implies 3.]$ Let $P_\bullet \twoheadrightarrow A$ be a projective resolution fo $A$ and $Q$ be an injective module. Taking $\h_R(-, Q)$ we have the following complex: 
+	\[0 \to \h_R(A,Q) \xto{d_0^*} \h_R(P_0,Q) \xto{d_1^*} \h_R(P_1,Q) \xto{d_2^*} \h_R(P_2,Q) \xto{d_3^*} \dots\]
+	and we claim that it is a LES. Firstly, it is clear that $\im d_n^* \subseteq \ker d_{n+1}^*$ since $d_{n+1}^*d_n^* = (d_nd_{n+1})^* = 0$.
 
+	On the other hand, let $\phi \in \ker d_{n+1}^*$, so $\phi:P_n \to Q$ such that $\phi \circ d_{n+1} = 0$. This implies that $\im d_{n+1}\subseteq \ker \phi$. Since projective resolution is exact, thus $\ker d_n \subseteq \ker \phi \subseteq P_n$. Define $\tilde{d_n}:P_n/\ker d_n \to P_{n-1}$ by $[x]\mapsto d_n(x)$. Clearly $\tilde{d_n}$ is injective. Define also $\tilde{\phi}:P_n/\ker d_n \to Q$ by $[x] \mapsto \phi(x)$. We thus have the following commutative diagram by the definition of $Q$ being injective:
+	\[\begin{tikzcd}[sep=small]
+	Q \\
+	\\
+	{P_n /\ker d_n} && {P_{n-1}}
+	\arrow["{\tilde{\phi}}", from=3-1, to=1-1]
+	\arrow["{\tilde{d_n}}"', hook, from=3-1, to=3-3]
+	\arrow["{\exists \varphi}"', dashed, from=3-3, to=1-1]
+	\end{tikzcd}\] 
+	where existence of $\varphi$ is ensured by the definition of injective module. Lastly, we check that $d_n^*(\varphi) = \phi$. The commutative diagram implies $\varphi \circ \tilde{d_n} = \tilde{\phi}$, so 
+	\[(\varphi \circ \tilde{d_n})([x]) = \tilde{\phi}([x]) \implies \varphi(d_n(x)) = \phi(x) \implies (d_n^*(\varphi))(x) = \phi(x)\]
+	Thus $d_n^*(\varphi) = \phi$, implying that $\phi\in \im d_n^*$. Thus the complex obtained is indeed exact, and thus its cohomologies, i.e. all the Ext groups, are trivial. This completes the proof.
 \end{proof}
 
 
